correct ci-for-node.yaml syntax

--- a/.github/workflows/ci-for-node.yaml
+++ b/.github/workflows/ci-for-node.yaml
@@ -28,6 +28,6 @@ jobs:
             - name: install dependencies with yarn
               run: yarn install --frozen-lockfile
             - run: yarn test
-              run: yarn lint
+            - run: yarn lint
             - name: Check code formatting with prettier
               run: yarn format:check
